# peridetic

./: CMakeLists.txt  LICENSE  NotesMisc.txt  README.md
cmake/: xConfig.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  periLogo.xcf  periLogoOpenGraph.xcf
eval/: CMakeLists.txt  evalExcess.cpp  evalMathSummary.cpp  evalSpeed.cpp  plotZetaDiffs.plt
examples/: CMakeLists.txt  README.md  lpaForXyz.cpp  minimalExample.cpp  precision.cpp  xyzForLpaDegrees.cpp  xyzForLpaRadians.cpp
include/: CMakeLists.txt  periDetail.h  peridetic.h
periUse/: CMakeLists.txt  README.md  helloCommon.h  helloSansPeri.cpp  helloWithPeri.cpp  runExample.sh
tests/: CMakeLists.txt  corsDataPairs.h  corsDataParser.h  demoExcess.cpp  periLocal.h  periSim.h  testAccuracy.cpp  testBuildHello.cpp  testCORS.cpp  testLocal.cpp  testMath.cpp  testXforms.cpp
